Apply suggestions from code review
Co-authored-by: Paula Carrigan <77334475+netapp-pcarriga@users.noreply.github.com>

--- a/nvme-rockylinux-overview.adoc
+++ b/nvme-rockylinux-overview.adoc
@@ -13,7 +13,7 @@ summary: Learn about ONTAP support and features for Rocky Linux
 :imagesdir: ./media/
 
 [.lead]
-The following ONTAP features are supported by ONTAP versions and Rocky Linux SAN host operating systems: 
+The following ONTAP features are supported by ONTAP versions and Rocky Linux SAN host operating systems for configuration with NVMe over Fabrics (NVMe-oF) protocols:
 
 [cols="25,25,25,25",options="header"]
 |===
