--- a/nvme-rhel-overview.adoc
+++ b/nvme-rhel-overview.adoc
@@ -13,7 +13,7 @@ summary: Learn about ONTAP support and features for RHEL hosts
 :imagesdir: ./media/
 
 [.lead]
-The following ONTAP features are supported by ONTAP versions and RHEL SAN host operating systems: 
+The following ONTAP features are supported by ONTAP versions and RHEL SAN host operating systems for configuration with NVMe over Fabrics (NVMe-oF) protocols.
 
 [cols="25,25,25,25",options="header"]
 |===
